[package]
name = "ibex_parser"
authors = ["Felipe Torres González <torresfelipex1@gmail.com>"]
version = "0.0.1"
edition = "2021"
description = "A parser for stock data of the Ibex 35 index and its components."
readme = "README.md"
repository = "https://github.com/felipet/ibex_parser"
keywords = ["stock", "ibex", "trading"]
categories = ["finance"]

[dependencies]
rstest = "0.18.2"
pretty_assertions = "1.*"
